--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<script type="text/javascript" src="../localdata.js"></script>
+<script type="text/javascript" src="../src/localdata.js"></script>
 <script type="text/javascript">
     window.ld = new LocalData({
         a : 1,
